--- a/config.yaml
+++ b/config.yaml
@@ -16,3 +16,14 @@ autoscale:
   enableAutoScale: true
   tidbClusterID: t1
   httpServerAddr: http://tiflash-autoscale-lb.tiflash-autoscale.svc.cluster.local:8081
+
+workload:
+  round1:
+    count: 500
+    threadNum: 2
+  round2:
+    count: 5000
+    threadNum: 50
+  round3:
+    count: 500
+    threadNum: 2
